Vaadin was added Server port was changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,6 @@
+server.port=8888
 spring.main.banner-mode=off
-
-# create and drop tables and sequences, loads import.sql
 spring.jpa.hibernate.ddl-auto=create-drop
-
-# Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@sql.edu-netcracker.com:1251
-spring.datasource.username=ODESSA_18
-spring.datasource.password=ODESSA_18
+spring.datasource.url=jdbc:oracle:thin:@localhost:8080
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-# HikariCP settings
-# spring.datasource.hikari.*
-
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=5
