--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.datasource.password=testpass
 spring.datasource.tomcat.initial-size=5
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=40
-spring.datasource.tomcat.max-idle=35
+#spring.datasource.tomcat.max-idle=35
 spring.datasource.tomcat.test-on-borrow=true
 #spring.datasource.tomcat.validationQuery=select 177 from dual
