--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ server.port=8888
 spring.main.banner-mode=off
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-
+#spring.datasource.initialize=true
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@sql.edu-netcracker.com:1251:XE
 spring.datasource.username=ODESSA_16
 spring.datasource.password=testpass
 
-spring.datasource.tomcat.initial-size=5
-spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.max-active=40
-#spring.datasource.tomcat.max-idle=35
+spring.datasource.initial-size=5
+spring.datasource.max-wait=20000
+spring.datasource.max-active=40
+#spring.datasource.max-idle=35
 spring.datasource.tomcat.test-on-borrow=true
 #spring.datasource.tomcat.validationQuery=select 177 from dual
