--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@sql.edu-netcracker.com:1251:XE
 spring.datasource.username=ODESSA_18
 spring.datasource.password=testpass
-
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1251:XE
+#spring.datasource.username=tanya
+#spring.datasource.password=tanya
 #spring.datasource.initialize=true
 #spring.datasource.initial-size=5
 #spring.datasource.max-wait=20000
