--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,7 @@
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
                 <version>8.1.0</version>
-                <type>pom</type>
-                <scope>import</scope>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
