--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <version>8.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-spring</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
@@ -74,7 +79,7 @@
                 <artifactId>vaadin-bom</artifactId>
                 <version>8.1.0</version>
                 <type>pom</type>
-                <scope>provided</scope>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
