--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 server.port=8888
+server.address=127.0.0.1
 spring.main.banner-mode=off
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@sql.edu-netcracker.com:1251:XE
-#spring.datasource.username=ODESSA_18
-#spring.datasource.password=testpass
-spring.datasource.username=ODESSA_19
-spring.datasource.password=ODESSA_19
+spring.datasource.username=ODESSA_18
+spring.datasource.password=testpass
+#spring.datasource.username=ODESSA_19
+#spring.datasource.password=ODESSA_19
 #spring.datasource.initialize=true
 #spring.datasource.initial-size=5
 #spring.datasource.max-wait=20000
