--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@sql.edu-netcracker.com:1251:XE
-spring.datasource.username=ODESSA_18
-spring.datasource.password=testpass
+spring.datasource.username=ODESSA_19
+spring.datasource.password=ODESSA_19
 #spring.datasource.username=ODESSA_19
 #spring.datasource.password=ODESSA_19
 #spring.datasource.initialize=true
