--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>vaadin-toastr</artifactId>
+            <version>1.0.9</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
