--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,12 @@ server.address=127.0.0.1
 spring.main.banner-mode=off
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@sql.edu-netcracker.com:1251:XE
 spring.datasource.username=ODESSA_19
 spring.datasource.password=ODESSA_19
-#spring.datasource.username=ODESSA_19
-#spring.datasource.password=ODESSA_19
+#spring.datasource.username=ODESSA_18
+#spring.datasource.password=testpass
 #spring.datasource.initialize=true
 #spring.datasource.initial-size=5
 #spring.datasource.max-wait=20000
@@ -17,3 +16,5 @@ spring.datasource.password=ODESSA_19
 #spring.datasource.max-idle=35
 #spring.datasource.tomcat.test-on-borrow=true
 #spring.datasource.tomcat.validationQuery=select 177 from dual
+currency.registration.newuser=5000
+currency.registration.invitedby=3000
