--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.datasource.password=ODESSA_19
 #spring.datasource.tomcat.validationQuery=select 177 from dual
 currency.registration.newuser=5000
 currency.registration.invitedby=3000
+advertisement.list.pageCapasity = 1
+advertisement.mylist.pageCapasity = 2
