--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,16 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.vaadin.addons/vaadin-combobox-multiselect -->
         <dependency>
-            <groupId>org.vaadin.addons</groupId>
-            <artifactId>vaadin-combobox-multiselect</artifactId>
-            <version>1.1.10</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>3.0.5.RELEASE</version>
         </dependency>
 
     </dependencies>
@@ -95,14 +100,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-<!--
-    <repositories>
-        <repository>
-            <id>vaadin-addons</id>
-            <url>http://maven.vaadin.com/vaadin-addons</url>
-        </repository>
-    </repositories>
--->
+
     <build>
         <plugins>
             <plugin>
