--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ currency.registration.invitedby=3000
 advertisement.list.pageCapasity = 3
 advertisement.mylist.pageCapasity = 5
 message.pageCapacity = 5
+petlist.pageCapacity = 5
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=PetSpaceInfo@gmail.com
