Fix some issues during edition of ads Simple implementation of friends news

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,12 @@ spring.datasource.password=ODESSA_19
 #spring.datasource.tomcat.validationQuery=select 177 from dual
 currency.registration.newuser=5000
 currency.registration.invitedby=3000
-advertisement.list.pageCapasity = 3
-advertisement.mylist.pageCapasity = 5
+advertisement.list.pageCapacity = 5
+advertisement.mylist.pageCapacity = 5
 message.pageCapacity = 5
 petlist.pageCapacity = 5
+news.friends.pageCapacity = 2
+news.groups.pageCapacity = 2
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=PetSpaceInfo@gmail.com
