added: subscribe, leave group; paging: myGoups, myAdministerGroups, allGroups

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ advertisement.list.pageCapasity = 3
 advertisement.mylist.pageCapasity = 5
 message.pageCapacity = 5
 petlist.pageCapacity = 5
+groups.pageCapacity = 2
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=PetSpaceInfo@gmail.com
