--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,12 @@ spring.datasource.password=ODESSA_19
 currency.registration.newuser=5000
 currency.registration.invitedby=3000
 advertisement.list.pageCapacity = 5
-advertisement.mylist.pageCapacity = 5
+advertisement.mylist.pageCapacity = 4
 message.pageCapacity = 5
 petlist.pageCapacity = 5
 news.friends.pageCapacity = 2
 news.groups.pageCapacity = 2
+profile.defaultAvatar = https://goo.gl/6eEoWo
 groups.pageCapacity = 2
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
