Fixed image issue for new users Fixed bug in MyGroupsListUI (npe during searching group) Changed min size for name and surname during registration Property "Resizable" was turned off for all windows

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ message.pageCapacity = 5
 petlist.pageCapacity = 5
 news.friends.pageCapacity = 2
 news.groups.pageCapacity = 2
-profile.defaultAvatar = https://goo.gl/6eEoWo
+profile.defaultAvatar = http://appk.kz/images/no-avatar.jpg
 groups.pageCapacity = 2
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
