Added paging for user list and friend list. Fixed 404 with dot request.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ advertisement.list.pageCapacity = 5
 advertisement.mylist.pageCapacity = 4
 message.pageCapacity = 5
 petlist.pageCapacity = 5
+friendlist.pageCapacity = 1
+userlist.pageCapacity = 5
 news.friends.pageCapacity = 2
 news.groups.pageCapacity = 2
 groups.pageCapacity = 2
